src/ysharp/.antlr/ysharpParser.java
// Generated from c:/Users/yagiz/Desktop/Cbuild/src/ysharp/ysharp.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ysharpParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FUNCTION=1, VAR=2, CONST=3, DO=4, END=5, FOR=6, IN=7, WHILE=8, TRY=9, 
		CATCH=10, FINALLY=11, IF=12, THEN=13, ELIF=14, ELSE=15, PRINT=16, PRINTLN=17, 
		RETURN=18, BREAK=19, CONTINUE=20, TRUE=21, FALSE=22, NULL=23, INC=24, 
		DEC=25, PLUS_ASSIGN=26, MINUS_ASSIGN=27, MUL_ASSIGN=28, DIV_ASSIGN=29, 
		MOD_ASSIGN=30, EQUAL=31, NOT_EQUAL=32, GTE=33, LTE=34, GT=35, LT=36, SAFE_DOT=37, 
		ASSIGN=38, PLUS=39, MINUS=40, MUL=41, DIV=42, MOD=43, NOT=44, QUESTION=45, 
		COLON=46, LPAREN=47, RPAREN=48, LBRACKET=49, RBRACKET=50, LBRACE=51, RBRACE=52, 
		COMMA=53, DOT=54, SEMI=55, HEX_NUMBER=56, DOUBLE=57, DECIMAL_NUMBER=58, 
		STRING=59, CHAR=60, IDENTIFIER=61, WS=62, LINE_COMMENT=63, BLOCK_COMMENT=64;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_funDecl = 2, RULE_varDecl = 3, 
		RULE_constDecl = 4, RULE_statement = 5, RULE_block = 6, RULE_exprStmt = 7, 
		RULE_forStmt = 8, RULE_whileStmt = 9, RULE_tryStmt = 10, RULE_ifStmt = 11, 
		RULE_printStmt = 12, RULE_printlnStmt = 13, RULE_returnStmt = 14, RULE_breakStmt = 15, 
		RULE_continueStmt = 16, RULE_expression = 17, RULE_assignment = 18, RULE_ternaryConditional = 19, 
		RULE_equality = 20, RULE_comparison = 21, RULE_term = 22, RULE_factor = 23, 
		RULE_unary = 24, RULE_postfix = 25, RULE_call = 26, RULE_primary = 27, 
		RULE_atom = 28, RULE_array = 29, RULE_map = 30, RULE_assignmentOp = 31, 
		RULE_lvalue = 32, RULE_function = 33, RULE_parameters = 34, RULE_arguments = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declaration", "funDecl", "varDecl", "constDecl", "statement", 
			"block", "exprStmt", "forStmt", "whileStmt", "tryStmt", "ifStmt", "printStmt", 
			"printlnStmt", "returnStmt", "breakStmt", "continueStmt", "expression", 
			"assignment", "ternaryConditional", "equality", "comparison", "term", 
			"factor", "unary", "postfix", "call", "primary", "atom", "array", "map", 
			"assignmentOp", "lvalue", "function", "parameters", "arguments"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'function'", "'var'", "'const'", "'do'", "'end'", "'for'", "'in'", 
			"'while'", "'try'", "'catch'", "'finally'", "'if'", "'then'", "'elif'", 
			"'else'", "'print'", "'println'", "'return'", "'break'", "'continue'", 
			"'true'", "'false'", "'null'", "'++'", "'--'", "'+='", "'-='", "'*='", 
			"'/='", "'%='", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'?.'", 
			"'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'?'", "':'", "'('", 
			"')'", "'['", "']'", "'{'", "'}'", "','", "'.'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FUNCTION", "VAR", "CONST", "DO", "END", "FOR", "IN", "WHILE", 
			"TRY", "CATCH", "FINALLY", "IF", "THEN", "ELIF", "ELSE", "PRINT", "PRINTLN", 
			"RETURN", "BREAK", "CONTINUE", "TRUE", "FALSE", "NULL", "INC", "DEC", 
			"PLUS_ASSIGN", "MINUS_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", 
			"EQUAL", "NOT_EQUAL", "GTE", "LTE", "GT", "LT", "SAFE_DOT", "ASSIGN", 
			"PLUS", "MINUS", "MUL", "DIV", "MOD", "NOT", "QUESTION", "COLON", "LPAREN", 
			"RPAREN", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "COMMA", "DOT", 
			"SEMI", "HEX_NUMBER", "DOUBLE", "DECIMAL_NUMBER", "STRING", "CHAR", "IDENTIFIER", 
			"WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ysharp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ysharpParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ysharpParser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4542603153165456222L) != 0)) {
				{
				{
				setState(72);
				declaration();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public FunDeclContext funDecl() {
			return getRuleContext(FunDeclContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public ConstDeclContext constDecl() {
			return getRuleContext(ConstDeclContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				funDecl();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				varDecl();
				}
				break;
			case CONST:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				constDecl();
				}
				break;
			case DO:
			case FOR:
			case WHILE:
			case TRY:
			case IF:
			case PRINT:
			case PRINTLN:
			case RETURN:
			case BREAK:
			case CONTINUE:
			case TRUE:
			case FALSE:
			case NULL:
			case INC:
			case DEC:
			case PLUS:
			case MINUS:
			case NOT:
			case LPAREN:
			case LBRACKET:
			case LBRACE:
			case HEX_NUMBER:
			case DOUBLE:
			case DECIMAL_NUMBER:
			case STRING:
			case CHAR:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunDeclContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(ysharpParser.FUNCTION, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public FunDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDecl; }
	}

	public final FunDeclContext funDecl() throws RecognitionException {
		FunDeclContext _localctx = new FunDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(FUNCTION);
			setState(87);
			function();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(ysharpParser.VAR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ysharpParser.IDENTIFIER, 0); }
		public TerminalNode SEMI() { return getToken(ysharpParser.SEMI, 0); }
		public TerminalNode ASSIGN() { return getToken(ysharpParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(VAR);
			setState(90);
			match(IDENTIFIER);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(91);
				match(ASSIGN);
				setState(92);
				expression();
				}
			}

			setState(95);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstDeclContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(ysharpParser.CONST, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ysharpParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(ysharpParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ysharpParser.SEMI, 0); }
		public ConstDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constDecl; }
	}

	public final ConstDeclContext constDecl() throws RecognitionException {
		ConstDeclContext _localctx = new ConstDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(CONST);
			setState(98);
			match(IDENTIFIER);
			setState(99);
			match(ASSIGN);
			setState(100);
			expression();
			setState(101);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class,0);
		}
		public ForStmtContext forStmt() {
			return getRuleContext(ForStmtContext.class,0);
		}
		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class,0);
		}
		public TryStmtContext tryStmt() {
			return getRuleContext(TryStmtContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public PrintStmtContext printStmt() {
			return getRuleContext(PrintStmtContext.class,0);
		}
		public PrintlnStmtContext printlnStmt() {
			return getRuleContext(PrintlnStmtContext.class,0);
		}
		public ReturnStmtContext returnStmt() {
			return getRuleContext(ReturnStmtContext.class,0);
		}
		public BreakStmtContext breakStmt() {
			return getRuleContext(BreakStmtContext.class,0);
		}
		public ContinueStmtContext continueStmt() {
			return getRuleContext(ContinueStmtContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRUE:
			case FALSE:
			case NULL:
			case INC:
			case DEC:
			case PLUS:
			case MINUS:
			case NOT:
			case LPAREN:
			case LBRACKET:
			case LBRACE:
			case HEX_NUMBER:
			case DOUBLE:
			case DECIMAL_NUMBER:
			case STRING:
			case CHAR:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				exprStmt();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				forStmt();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				whileStmt();
				}
				break;
			case TRY:
				enterOuterAlt(_localctx, 4);
				{
				setState(106);
				tryStmt();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 5);
				{
				setState(107);
				ifStmt();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 6);
				{
				setState(108);
				printStmt();
				}
				break;
			case PRINTLN:
				enterOuterAlt(_localctx, 7);
				{
				setState(109);
				printlnStmt();
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 8);
				{
				setState(110);
				returnStmt();
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 9);
				{
				setState(111);
				breakStmt();
				}
				break;
			case CONTINUE:
				enterOuterAlt(_localctx, 10);
				{
				setState(112);
				continueStmt();
				}
				break;
			case DO:
				enterOuterAlt(_localctx, 11);
				{
				setState(113);
				block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode DO() { return getToken(ysharpParser.DO, 0); }
		public TerminalNode END() { return getToken(ysharpParser.END, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(DO);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4542603153165456222L) != 0)) {
				{
				{
				setState(117);
				declaration();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprStmtContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ysharpParser.SEMI, 0); }
		public ExprStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprStmt; }
	}

	public final ExprStmtContext exprStmt() throws RecognitionException {
		ExprStmtContext _localctx = new ExprStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_exprStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			expression();
			setState(126);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForStmtContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(ysharpParser.FOR, 0); }
		public List<TerminalNode> SEMI() { return getTokens(ysharpParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(ysharpParser.SEMI, i);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode IN() { return getToken(ysharpParser.IN, 0); }
		public ForStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStmt; }
	}

	public final ForStmtContext forStmt() throws RecognitionException {
		ForStmtContext _localctx = new ForStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_forStmt);
		int _la;
		try {
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				match(FOR);
				setState(132);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VAR:
					{
					setState(129);
					varDecl();
					}
					break;
				case TRUE:
				case FALSE:
				case NULL:
				case INC:
				case DEC:
				case PLUS:
				case MINUS:
				case NOT:
				case LPAREN:
				case LBRACKET:
				case LBRACE:
				case HEX_NUMBER:
				case DOUBLE:
				case DECIMAL_NUMBER:
				case STRING:
				case CHAR:
				case IDENTIFIER:
					{
					setState(130);
					exprStmt();
					}
					break;
				case SEMI:
					{
					setState(131);
					match(SEMI);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4542603153163419648L) != 0)) {
					{
					setState(134);
					expression();
					}
				}

				setState(137);
				match(SEMI);
				setState(139);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(138);
					expression();
					}
					break;
				}
				setState(141);
				statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				match(FOR);
				setState(143);
				varDecl();
				setState(144);
				match(IN);
				setState(145);
				expression();
				setState(146);
				statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileStmtContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(ysharpParser.WHILE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public WhileStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStmt; }
	}

	public final WhileStmtContext whileStmt() throws RecognitionException {
		WhileStmtContext _localctx = new WhileStmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_whileStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(WHILE);
			setState(151);
			expression();
			setState(152);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TryStmtContext extends ParserRuleContext {
		public TerminalNode TRY() { return getToken(ysharpParser.TRY, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode CATCH() { return getToken(ysharpParser.CATCH, 0); }
		public TerminalNode LPAREN() { return getToken(ysharpParser.LPAREN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ysharpParser.IDENTIFIER, 0); }
		public TerminalNode RPAREN() { return getToken(ysharpParser.RPAREN, 0); }
		public TerminalNode FINALLY() { return getToken(ysharpParser.FINALLY, 0); }
		public TryStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tryStmt; }
	}

	public final TryStmtContext tryStmt() throws RecognitionException {
		TryStmtContext _localctx = new TryStmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tryStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(TRY);
			setState(155);
			block();
			setState(156);
			match(CATCH);
			setState(157);
			match(LPAREN);
			setState(158);
			match(IDENTIFIER);
			setState(159);
			match(RPAREN);
			setState(160);
			block();
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FINALLY) {
				{
				setState(161);
				match(FINALLY);
				setState(162);
				block();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStmtContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(ysharpParser.IF, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> THEN() { return getTokens(ysharpParser.THEN); }
		public TerminalNode THEN(int i) {
			return getToken(ysharpParser.THEN, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<TerminalNode> ELIF() { return getTokens(ysharpParser.ELIF); }
		public TerminalNode ELIF(int i) {
			return getToken(ysharpParser.ELIF, i);
		}
		public TerminalNode ELSE() { return getToken(ysharpParser.ELSE, 0); }
		public IfStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStmt; }
	}

	public final IfStmtContext ifStmt() throws RecognitionException {
		IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_ifStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(IF);
			setState(166);
			expression();
			setState(167);
			match(THEN);
			setState(168);
			block();
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELIF) {
				{
				{
				setState(169);
				match(ELIF);
				setState(170);
				expression();
				setState(171);
				match(THEN);
				setState(172);
				block();
				}
				}
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(179);
				match(ELSE);
				setState(180);
				block();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintStmtContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(ysharpParser.PRINT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ysharpParser.SEMI, 0); }
		public PrintStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStmt; }
	}
